--- a/app/src/main/res/layout/tractatedetail_frag.xml
+++ b/app/src/main/res/layout/tractatedetail_frag.xml
@@ -5,7 +5,9 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tractatetv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="18sp"
         android:text="Hello World!" />
 </LinearLayout>
