--- a/app/src/main/res/layout/tractatedetail_frag.xml
+++ b/app/src/main/res/layout/tractatedetail_frag.xml
@@ -13,6 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
+            android:paddingRight="5dp"
             android:text="Hello World!" />
 
         <TextView
@@ -20,14 +21,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="Hello World!" />
+            android:text="" />
 
         <TextView
             android:id="@+id/tractatetv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="Hello World!" />
+            android:text="" />
 
     </RelativeLayout>
 
