--- a/app/src/main/res/layout/tractatedetail_frag.xml
+++ b/app/src/main/res/layout/tractatedetail_frag.xml
@@ -4,9 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tractatetv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:text="" />
 
         <TextView
             android:id="@+id/contenttv"
@@ -23,13 +30,8 @@
             android:textSize="18sp"
             android:text="" />
 
-        <TextView
-            android:id="@+id/tractatetv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="" />
 
-    </RelativeLayout>
+
+    </LinearLayout>
 
 </ScrollView>
