--- a/app/src/main/res/layout/tractatedetail_frag.xml
+++ b/app/src/main/res/layout/tractatedetail_frag.xml
@@ -16,6 +16,7 @@
             android:text="" />
 
         <TextView
+            android:layout_marginTop="50dp"
             android:id="@+id/contenttv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
