--- a/app/src/main/res/layout/tractatedetail_frag.xml
+++ b/app/src/main/res/layout/tractatedetail_frag.xml
@@ -6,14 +6,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tractatetv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="" />
+            android:text=""/>
 
         <TextView
             android:layout_marginTop="50dp"
@@ -22,14 +23,15 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:paddingRight="5dp"
-            android:text="Hello World!" />
+            android:text="Hello World!"/>
 
         <TextView
             android:id="@+id/translationtv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="" />
+            android:text=""
+            android:visibility="gone"/>
 
 
 
