文章单词点击显示单词Dialog，读音未完成

--- a/app/src/main/res/layout/worddetail_frag.xml
+++ b/app/src/main/res/layout/worddetail_frag.xml
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:src="@drawable/ic_volume_up_black_24dp"/>
+                android:src="@drawable/volume_play"/>
 
             <!-- 美音 -->
             <TextView
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:src="@drawable/ic_volume_up_black_24dp"/>
+                android:src="@drawable/volume_play"/>
         </LinearLayout>
 
 
