--- a/app/src/main/res/layout/tractatedetail_frag.xml
+++ b/app/src/main/res/layout/tractatedetail_frag.xml
@@ -4,11 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -34,6 +29,14 @@
                 android:text="English"/>
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/loading"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="正在加载......"
+            android:gravity="center_horizontal"
+            android:visibility="gone"/>
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -48,15 +51,6 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/contenttv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    style="@style/Base.TextAppearance.AppCompat.Body1"
-                    android:lineSpacingMultiplier="1.2"
-                    android:text="Hello World!"/>
-
-                <TextView
                     android:id="@+id/tractatetv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -66,16 +60,16 @@
                     android:text=""/>
 
                 <TextView
-                    android:id="@+id/loading"
+                    android:id="@+id/contenttv"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="正在加载......"
-                    android:gravity="center_horizontal"
-                    android:layout_centerInParent="true"/>
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    style="@style/Base.TextAppearance.AppCompat.Body1"
+                    android:lineSpacingMultiplier="1.2"
+                    android:text="Hello World!"/>
 
             </RelativeLayout>
         </ScrollView>
 
-    </LinearLayout>
 
 </LinearLayout>
