--- a/app/src/main/res/layout/tractates_act.xml
+++ b/app/src/main/res/layout/tractates_act.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         app:tabGravity="fill"
         app:tabMaxWidth="0dp"
-        app:tabMode="scrollable" />
+        app:tabMode="fixed" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
