新概念英語1

--- a/app/src/main/res/layout/tractatedetail_frag.xml
+++ b/app/src/main/res/layout/tractatedetail_frag.xml
@@ -60,7 +60,7 @@
                     android:text=""/>
 
                 <TextView
-                    android:id="@+id/contenttv"
+                    android:id="@+id/tmptractatetv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
