--- a/app/src/main/res/layout/addtractate_act.xml
+++ b/app/src/main/res/layout/addtractate_act.xml
@@ -127,6 +127,11 @@
                android:layout_marginLeft="5dp"
                android:text="添加"/>
        </LinearLayout>
+
+       <TextView
+           android:id="@+id/error"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content" />
    </LinearLayout>
 
 </LinearLayout>
