--- a/app/src/main/res/layout/addtractate_act.xml
+++ b/app/src/main/res/layout/addtractate_act.xml
@@ -108,6 +108,32 @@
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
 
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="match_parent"
+               android:gravity="center_vertical"
+               android:textSize="18sp"
+               style="@style/TextAppearance.AppCompat.Body1"
+               android:text="选择文件夹:"/>
+
+           <EditText
+               android:id="@+id/selectfiledirectory"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:gravity="center_vertical"
+               android:background="#00000000"
+               android:textSize="15sp"
+               android:layout_marginLeft="5dp"
+               android:hint="选择一个文本文件"/>
+       </LinearLayout>
+
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="60dp"
+           android:orientation="horizontal"
+           android:paddingTop="10dp"
+           android:paddingBottom="10dp">
+
            <Button
                android:id="@+id/preview"
                android:layout_width="wrap_content"
@@ -130,6 +156,8 @@
 
        <TextView
            android:id="@+id/error"
+           android:singleLine="false"
+           android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
