--- a/app/src/main/res/layout/addtractate_act.xml
+++ b/app/src/main/res/layout/addtractate_act.xml
@@ -101,6 +101,7 @@
                android:hint="选择文本文件"/>
        </LinearLayout>
 
+
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
@@ -114,17 +115,24 @@
                android:gravity="center_vertical"
                android:textSize="18sp"
                style="@style/TextAppearance.AppCompat.Body1"
-               android:text="选择文件夹:"/>
+               android:text="选择分组:"/>
 
            <EditText
-               android:id="@+id/selectfiledirectory"
-               android:layout_width="match_parent"
+               android:id="@+id/selecttractategroup"
+               android:layout_width="wrap_content"
+               android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="#00000000"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
-               android:hint="选择一个文本文件"/>
+               android:hint="选择一个分组"/>
+
+           <Button
+               android:id="@+id/createtractategroup"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="创建分组"/>
        </LinearLayout>
 
        <LinearLayout
