--- a/app/src/main/res/layout/tractates_frag_item.xml
+++ b/app/src/main/res/layout/tractates_frag_item.xml
@@ -22,7 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="72dp"
             android:clickable="false"
-            android:gravity="center_vertical|center_horizontal"
+            android:layout_marginLeft="15dp"
+            android:gravity="center_vertical|"
             android:maxLines="1"
             android:minLines="1" />
 
