--- a/app/src/main/res/layout/sentencecollect_act.xml
+++ b/app/src/main/res/layout/sentencecollect_act.xml
@@ -21,11 +21,46 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
-        android:id="@+id/contentFrame"
+    <EditText
+        android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content" />
 
-    </FrameLayout>
+    <EditText
+        android:id="@+id/translation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/sentencegroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/sentencegroupselect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="选择句子分组"
+        android:onClick="onClick"/>
+
+    <Button
+        android:id="@+id/createsentencegroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="新建句子分组"
+        android:onClick="onClick"/>
+    <Button
+        android:id="@+id/affirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="添加"
+        android:onClick="onClick"/>
+
+    <Button
+        android:id="@+id/create"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="创建"
+        android:onClick="onClick"/>
 
 </LinearLayout>
