创建的句组编辑完成，创建的收藏句组能进入

--- a/app/src/main/res/menu/menu_sentences_createsgroup.xml
+++ b/app/src/main/res/menu/menu_sentences_createsgroup.xml
@@ -6,6 +6,10 @@
         android:title="修改名称"
         app:showAsAction="never"/>
     <item
+        android:id="@+id/delete_sgroup"
+        android:title="删除句单"
+        app:showAsAction="never"/>
+    <item
         android:id="@+id/delete_sentences"
         android:title="删除句子"
         app:showAsAction="never"/>
