--- a/app/src/main/res/menu/menu_sentences_createfsgroup.xml
+++ b/app/src/main/res/menu/menu_sentences_createfsgroup.xml
@@ -2,11 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/delete_fsgroup"
-        android:title="删除句单"
-        app:showAsAction="never"/>
-    <item
         android:id="@+id/delete_sentences"
         android:title="删除句子"
-        app:showAsAction="never"/>
+        app:showAsAction="always"/>
 </menu>
