--- a/app/src/main/res/layout/worddetail_dia.xml
+++ b/app/src/main/res/layout/worddetail_dia.xml
@@ -31,6 +31,15 @@
             android:layout_centerVertical="true"
             android:text="sdfsdf"/>
 
+        <TextView
+            android:id="@+id/aliasname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/wordname"
+            android:text=""/>
+
         <ImageButton
             android:id="@+id/add_word"
             android:layout_width="50dp"
