增加词典设置选项

--- a/app/src/main/res/layout/testmain_frag.xml
+++ b/app/src/main/res/layout/testmain_frag.xml
@@ -120,6 +120,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/worddetail" />
 
+        <Button
+            android:text="test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/test" />
+
     </LinearLayout>
 
 </ScrollView>
