--- a/app/src/main/res/layout/dict_act_item.xml
+++ b/app/src/main/res/layout/dict_act_item.xml
@@ -15,7 +15,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="72dp">
+        android:layout_height="82dp">
 
         <TextView
             android:id="@+id/name"
@@ -25,12 +25,27 @@
             android:layout_centerVertical="true"
             android:gravity="center_vertical|center_horizontal" />
 
-        <Button
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_download"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            background="?selectableItemBackgroundBorderless"
+            android:textColor="@android:color/white"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:text="下载"
-            android:background="?android:attr/selectableItemBackground"
+            android:drawableLeft="@drawable/ic_file_download_black_24dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:layout_alignParentRight="true"/>
+
+        <ProgressBar
+            android:id="@+id/progress"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="100"
+            android:layout_alignParentBottom="true"/>
 
     </RelativeLayout>
 
