词典下载及重新初始化完成

--- a/app/src/main/res/layout/dict_act_item.xml
+++ b/app/src/main/res/layout/dict_act_item.xml
@@ -8,6 +8,7 @@
     android:layout_marginRight="15dp"
     android:layout_marginTop="10dp"
     android:clickable="true"
+    android:id="@+id/item"
     android:foreground="?android:attr/selectableItemBackground"
     android:padding="16dp"
     app:cardCornerRadius="5dp"
