--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,8 @@
   <color name="colorPrimaryDark">#512DA8</color>
   <color name="colorAccent">#FF4081</color>
 
+  <color name="black">#000000</color>
+
     <!--  常用颜色 -->
     <color name="text_color_grey">#9da1a0</color>
     <color name="text_color_grey1">#3f3f3f</color>
