更新一些删除的跳转逻辑

--- a/app/src/main/res/layout/testmain_frag.xml
+++ b/app/src/main/res/layout/testmain_frag.xml
@@ -121,10 +121,10 @@
             android:id="@+id/worddetail" />
 
         <Button
-            android:text="test"
+            android:text="testDialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/test" />
+            android:id="@+id/testdialog" />
 
     </LinearLayout>
 
