--- a/app/src/main/res/layout/phoneticssymbolsdetail_act.xml
+++ b/app/src/main/res/layout/phoneticssymbolsdetail_act.xml
@@ -1,161 +1,102 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/detail_backdrop_height"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    <include layout="@layout/toolbar" />
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-            <ImageView
-                android:id="@+id/backdrop"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax" />
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.widget.NestedScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:orientation="vertical"
+        android:paddingTop="24dp">
 
-        <LinearLayout
+        <!-- 音标详情 -->
+        <android.support.v7.widget.CardView
+            android:layout_marginTop="@dimen/space_small"
+            android:layout_marginBottom="@dimen/space_small"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingTop="24dp">
+            android:layout_height="100dp"
+            android:layout_marginLeft="@dimen/space_normal"
+            android:layout_marginRight="@dimen/space_normal">
 
-            <!-- 音标详情 -->
-            <android.support.v7.widget.CardView
-                android:layout_marginTop="@dimen/space_small"
-                android:layout_marginBottom="@dimen/space_small"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_marginLeft="@dimen/space_normal"
-                android:layout_marginRight="@dimen/space_normal">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-                        <!-- 英音 -->
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="英:"/>
-                        <TextView
-                            android:id="@+id/phonetics_ipaname"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-
-                        <!-- 美音 -->
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:text="英:" />
-                        <TextView
-                            android:id="@+id/phonetics_kkname"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-
-                    </LinearLayout>
-
-                    <!-- 读音 -->
-                    <ImageButton
-                        android:id="@+id/phonetics_soundurl"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <!-- 英音 -->
                     <TextView
-                        android:id="@+id/phonetics_type"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:text="英:"/>
+                    <TextView
+                        android:id="@+id/phonetics_ipaname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <!-- 美音 -->
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:text="英:" />
+                    <TextView
+                        android:id="@+id/phonetics_kkname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
                 </LinearLayout>
 
-
-            </android.support.v7.widget.CardView>
-
-            <!-- 发音说明 -->
-            <android.support.v7.widget.CardView
-                android:layout_marginTop="@dimen/space_small"
-                android:layout_marginBottom="@dimen/space_small"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/space_normal"
-                android:layout_marginRight="@dimen/space_normal">
+                <!-- 读音 -->
+                <ImageButton
+                    android:id="@+id/phonetics_soundurl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
                 <TextView
-                    android:id="@+id/phonetics_content"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="音标说明"/>
+                    android:id="@+id/phonetics_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-            </android.support.v7.widget.CardView>
+            </LinearLayout>
 
-            <!-- 发音视频 -->
-            <android.support.v7.widget.CardView
-                android:layout_marginTop="@dimen/space_small"
-                android:layout_marginBottom="@dimen/space_small"
+
+        </android.support.v7.widget.CardView>
+
+        <!-- 发音说明 -->
+        <android.support.v7.widget.CardView
+            android:layout_marginTop="@dimen/space_small"
+            android:layout_marginBottom="@dimen/space_small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/space_normal"
+            android:layout_marginRight="@dimen/space_normal">
+
+            <TextView
+                android:id="@+id/phonetics_content"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/space_normal"
-                android:layout_marginRight="@dimen/space_normal">
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="音标说明"/>
 
-                <TextView
-                    android:id="@+id/phonetics_videourl"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="音标视頻"/>
+        </android.support.v7.widget.CardView>
 
-            </android.support.v7.widget.CardView>
+        <!--  相差单詞 -->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <!--  相差单詞 -->
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
 
-            </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
 
-        </LinearLayout>
-
-    </android.support.v4.widget.NestedScrollView>
-
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
